k8s/template/api.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-peer${NUM}
  namespace: peers
spec:
  selector:
    matchLabels:
      app: api-peer
  replicas: 1
  serviceName: "api-peer-headless"
  template:
    metadata:
      labels:
        app: api-peer
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: api-config-map${NUM}
                optional: false
          image: ${DOCKER_IMG}
          imagePullPolicy: Always
          name: api-peer
          ports:
            - containerPort: 3000
              name: 3000tcp02
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
         
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts :
            - name: log-api
              mountPath: /data/log
            - name : store
              mountPath : /data/hfc-key-store
      imagePullSecrets:
        - name: gitlab-secret
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

  volumeClaimTemplates:
  - metadata:
      name: log-api
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: store
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
