k8s/template/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: peers
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP}
    cert-manager.io/cluster-issuer: "cluster-letsencrypt-production"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
  - hosts:
    - ${API_HOST}
    secretName: api--tls
  
  rules:
  - host: ${API_HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: api-peer-svc
          servicePort: 3000
